--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^9.6.11",
+    "firebase-tools": "^10.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1"
   },
